apps/documentation/versioned_docs/version-2.5.0/luos-technology/index.mdx
---
custom_edit_url: null
---

# Luos Technology

## The most for the developer

Luos provides a simple way to think your hardware products as a group of independant features. You can easily manage and share your hardware products' features with your team, external developers, or with the community.
Luos engine is an open-source lightweight library that can be used on any MCU, leading to free and fast multi-electronic-boards products development. Choosing Luos to design a product will help you to develop, debug, validate, monitor, and manage it from the cloud.

## The most for the community

Most of the embedded developments are made from scratch. By using Luos engine, you will be able to capitalize on the development you, your company, or the Luos community already did. The re-usability of features encapsulated in Luos engine services will fasten the time your products reach the market and reassure the robustness and the universality of your applications.

Need dedicated help for your project? You can join the Luos community on <a href="https://discord.gg/luos" target="_blank" rel="external nofollow">Discord</a> or <a href="https://www.reddit.com/r/Luos/" target="_blank" rel="external nofollow">Reddit</a>.

## Good practices with Luos

Luos proposes organized and effective development practices, guaranteeing development flexibility and evolutivity of your hardware product, from the idea to the maintenance of the industrialized product fleet.

## Let's do this

This section details the features of Luos engine as an embedded development platform, following these subjects:

- **The [Basics](./basics/index.mdx) of Luos, explaining the general concepts and the project organization.**
- **Definition of [Nodes](./node/node.mdx), and the relation between Luos engine and the physical world.**
- **Definition of [Packages](./packages/index.mdx), and how to make a portable and reusable development.**
- **Definition of [Services](./services/index.mdx), how to create and declare features in your product.**
- **Definition of [Messages](./messages/index.mdx), when, why, and how to handle them, explaining the more advanced features of Luos engine.**
