apps/documentation/versioned_docs/version-2.7.0/luos-technology/index.mdx
---
custom_edit_url: null
slug: /
---

# Luos Technology

## The most for the developer

Luos provides a simple way to think your hardware products as a group of independant features. You can easily manage and share your hardware products' features with your team, external developers, or with the community.
Luos engine is an <a href="https://github.com/Luos-io/luos_engine" target="_blank" rel="external nofollow">open-source lightweight library</a> that can be used on any [MCU]/compatibility/mcu_demoboard), leading to free and fast multi-electronic-boards products development. Choosing Luos to design a product will help you to develop, debug, validate, monitor, and manage it from the cloud.

<a
  href="/tutorials/get-started"
  className="pagination-nav__link"
  style={{ display: 'inline-block' }}
>
  Get Started with Luos
</a>

## The most for the community

Most of the embedded developments are made from scratch. By using Luos engine, you will be able to capitalize on the development you, your company, or the Luos community already did. The re-usability of features encapsulated in Luos engine [services](./services/index.mdx) will fasten the time your products reach the market and reassure the robustness and the universality of your applications.

We created a community on <a href="https://discord.gg/luos" target="_blank" rel="external nofollow">Discord</a> to create exchanges among developers from around the world. This allows anyone to share their projects, needs and ideas for developing edge and embedded projects. Everyone is welcome to join:

<a
  href="https://discord.gg/luos"
  target="_blank"
  rel="external nofollow"
  className="pagination-nav__link"
  style={{ display: 'inline-block' }}
>
  Join the community
</a>

## Good practices with Luos

Luos proposes organized and effective development practices, guaranteeing development flexibility and evolutivity of your hardware product, from the idea to the maintenance of the industrialized product fleet.

We write monthly content on our blog about vision, new ways of thinking/developing projects, scalability, etc. Feel free to read them and bookmark them.
Here's a selection:

1. [A way to unleash Embedded Systems](/blog/a-way-to-unleash-embedded-systems)
2. [What is Luos, really? How we built the speech](/blog/what-is-luos-really-how-we-built-the-speech)
3. [How to connect electronic boards to the outside world](/blog/how-to-connect-electronic-boards-to-the-outside-world)

## Let's do this

This section details the features of Luos engine as an embedded development platform, following these subjects:

1. The **[Basics](./basics/index.mdx)** of Luos, explaining the general concepts and the project organization.
2. Definition of **[Nodes](./node/node.mdx)**, and the relation between Luos engine and the physical world.
3. Definition of **[Packages](./packages/index.mdx)**, and how to make a portable and reusable development.
4. Definition of **[Services](./services/index.mdx)**, how to create and declare features in your product.
5. Definition of **[Messages](./messages/index.mdx)**, when, why, and how to handle them, explaining the more advanced features of Luos engine.
